complete GPS tracker

--- a/views/login/login.html
+++ b/views/login/login.html
@@ -76,7 +76,7 @@
                     localStorage.setItem('token', response.data.token);
                     if(response.status === 200)
                     {
-                         window.location.href = "../expense/expense.html"
+                         window.location.href = "../shop/shopcre.html"
                         // redirect('./expense.html')
                         console.log('login  complete');
                     }
